--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -859,6 +859,22 @@ video[poster] {
   font-weight: bold;
 }
 
+.video-js .vjs-big-play-button {
+  right: 0;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  span{
+    color: white;
+    &:before{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
 @media (max-height: 467px) {
   .header-style02 {
     width: 1000px !important;
