--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -583,18 +583,20 @@ video[poster] {
   text-transform: uppercase;
   font-weight: bold; }
 
-.video-js .vjs-big-play-button {
-  right: 0;
-  margin: auto;
-  top: 0;
-  left: 0;
-  bottom: 0; }
-  .video-js .vjs-big-play-button span {
-    color: white; }
-    .video-js .vjs-big-play-button span:before {
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+.video-js {
+  margin: auto; }
+  .video-js .vjs-big-play-button {
+    right: 0;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0; }
+    .video-js .vjs-big-play-button span {
+      color: white; }
+      .video-js .vjs-big-play-button span:before {
+        display: flex;
+        justify-content: center;
+        align-items: center; }
 
 @media (max-height: 467px) {
   .header-style02 {
