--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -599,6 +599,9 @@ video[poster] {
         justify-content: center;
         align-items: center; }
 
+.modal-backdrop {
+  background: rgba(0, 0, 0, 0.8); }
+
 @media (max-height: 467px) {
   .header-style02 {
     width: 1000px !important; }
