--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -756,6 +756,9 @@ video[poster] {
     margin: auto;
     text-align: center;
     font-size: 15px;
+    line-height: 20px;
+    font-weight: bold;
+    color: white;
     font-style: italic;
   }
 }
