--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -587,6 +587,12 @@ video[poster] {
   margin-top: 5px;
 
   .box-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+    -webkit-box-orient: vertical;
+
     text-transform: uppercase;
     background: url("../img/tagtitle.jpg") no-repeat scroll 0 0 transparent;
     color: #FFFFFF;
