--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -588,10 +588,11 @@ video[poster] {
 .btn-order {
   background: #0e2b3d;
   color: white;
+  font-size: 16px;
+  font-weight: bold;
   margin-top: 20px;
-  padding: 10px 30px;
-  text-transform: uppercase;
-  font-weight: bold; }
+  padding: 10px 50px;
+  text-transform: uppercase; }
 
 .video-js {
   margin: auto; }
