--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -863,10 +863,11 @@ video[poster] {
 .btn-order {
   background: $primary-color;
   color: white;
-  margin-top: 20px;
-  padding: 10px 30px;
-  text-transform: uppercase;
+  font-size: 16px;
   font-weight: bold;
+  margin-top: 20px;
+  padding: 10px 50px;
+  text-transform: uppercase;
 }
 
 .video-js {
