--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -436,12 +436,14 @@ video[poster] {
     .box-detail .box-content td {
       vertical-align: top !important; }
     .box-detail .box-content ul {
-      list-style: none !important; }
+      list-style: none !important;
+      width: 90%; }
     .box-detail .box-content p {
       font-size: 15px !important;
       color: black !important;
       padding: 0; }
     .box-detail .box-content span {
+      text-align: justify;
       color: black; }
 
 .form-contact {
