--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -626,6 +626,12 @@ video[poster] {
     position: relative;
     text-align: justify;
 
+    ul {
+      li {
+        list-style: disc;
+      }
+    }
+
     td {
       vertical-align: top !important;
     }
