--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -434,7 +434,12 @@ video[poster] {
     position: relative;
     text-align: justify; }
     .box-detail .box-content ul li {
-      list-style: disc; }
+      list-style: disc;
+      position: relative; }
+      .box-detail .box-content ul li:before {
+        content: '\2022';
+        position: absolute;
+        left: 0; }
     .box-detail .box-content td {
       vertical-align: top !important; }
     .box-detail .box-content p {
