--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -627,13 +627,14 @@ video[poster] {
     text-align: justify;
 
     ul {
+      list-style: none;
       li {
-        list-style: disc;
+        list-style: none;
         position: relative;
         &:before{
           content: '\2022';
           position: absolute;
-          left: 0;
+          left: -20px;
         }
       }
     }
