--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1045,7 +1045,7 @@ nav {
   .content {
     padding: 20px;
     min-height: 352px;
-
+    height:100%;
     &.bg-1 {
       background-color: #f1f8e0;
     }
