--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -654,6 +654,99 @@ nav a {
               opacity: 1;
               top: -35px; }
 
+.testimonial-carousel .owl-dots {
+  display: none; }
+.testimonial-carousel .text-paper p {
+  margin-bottom: 0; }
+  .testimonial-carousel .text-paper p:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 10px; }
+  .testimonial-carousel .text-paper p:nth-child(2) {
+    font-size: 15px; }
+  .testimonial-carousel .text-paper p.actor {
+    margin-top: 20px;
+    font-size: 15px;
+    color: black;
+    font-weight: bold; }
+    .testimonial-carousel .text-paper p.actor span {
+      font-weight: normal;
+      color: #7d7a7a; }
+.testimonial-carousel .owl-nav {
+  width: 7%;
+  position: absolute;
+  right: 40%;
+  bottom: 40px; }
+  .testimonial-carousel .owl-nav:before {
+    position: absolute;
+    content: "|";
+    left: 0;
+    right: 0;
+    top: 10px;
+    font-size: 20px; }
+  .testimonial-carousel .owl-nav [class*=owl-] {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    background: none;
+    color: black;
+    font-size: 25px; }
+    .testimonial-carousel .owl-nav [class*=owl-]:hover {
+      background: none;
+      color: black; }
+  .testimonial-carousel .owl-nav:hover {
+    background: unset; }
+  .testimonial-carousel .owl-nav .owl-prev {
+    left: 0; }
+  .testimonial-carousel .owl-nav .owl-next {
+    right: 0; }
+
+.wrap-paper {
+  padding: 20px;
+  border-radius: 15px;
+  border: 1px #F16687 solid; }
+  .wrap-paper .owl-dots {
+    width: 30%;
+    right: 10%;
+    left: unset;
+    bottom: 0px; }
+    .wrap-paper .owl-dots .owl-dot:hover span, .wrap-paper .owl-dots .owl-dot.active span {
+      background: #CCC; }
+    .wrap-paper .owl-dots .owl-dot span {
+      border: 2px solid #CCC; }
+  .wrap-paper .owl-nav {
+    width: 30%;
+    position: absolute;
+    right: 10%;
+    bottom: 30px; }
+    .wrap-paper .owl-nav div[class^="owl"] {
+      position: absolute;
+      height: 30px;
+      width: 30px;
+      background: none; }
+      .wrap-paper .owl-nav div[class^="owl"]:hover {
+        background: unset; }
+      .wrap-paper .owl-nav div[class^="owl"] i {
+        font-size: 30px;
+        color: black; }
+    .wrap-paper .owl-nav .owl-prev {
+      left: -20px; }
+    .wrap-paper .owl-nav .owl-next {
+      right: -20px; }
+  .wrap-paper .text-paper p {
+    margin-bottom: 0; }
+    .wrap-paper .text-paper p:first-child {
+      color: #a5a3a3;
+      margin-bottom: 10px; }
+    .wrap-paper .text-paper p:nth-child(2) {
+      color: black;
+      font-weight: bold;
+      font-size: 16px;
+      margin-bottom: 10px; }
+    .wrap-paper .text-paper p:last-child {
+      font-size: 15px; }
+
 .gtcl {
   background-color: #d7e2e8; }
   .gtcl .content {
@@ -674,20 +767,45 @@ nav a {
     margin-bottom: 10px; }
   .gtcl h4 {
     text-transform: uppercase;
-    font-size: 20px; }
+    font-size: 20px;
+    text-align: center; }
     .gtcl h4.do {
       color: #E44126; }
     .gtcl h4.xanh {
       color: #367766; }
     .gtcl h4.vang {
       color: #f6c251; }
-  .gtcl ul li {
-    display: flex;
-    align-items: flex-start;
-    font-size: 16px; }
-    .gtcl ul li img {
-      margin-right: 10px;
-      width: 16px; }
+  .gtcl p {
+    text-align: center; }
+  .gtcl.invent {
+    background-image: url("../img/invent/pnk.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: color;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding-top: 50px; }
+    .gtcl.invent .owl-nav div[class^="owl"] {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      height: 30px;
+      width: 30px;
+      border-radius: 100%;
+      background: none;
+      border: 1px solid #F16687; }
+      .gtcl.invent .owl-nav div[class^="owl"] i {
+        color: #F16687; }
+    .gtcl.invent .owl-nav .owl-prev {
+      left: -20px; }
+    .gtcl.invent .owl-nav .owl-next {
+      right: -20px; }
+    .gtcl.invent .content {
+      background: none; }
+      .gtcl.invent .content p {
+        font-size: 14px; }
+    .gtcl.invent .icon-top {
+      padding: 0 40px; }
 
 @media (max-width: 467px) {
   .product-row .title-cat {
@@ -743,5 +861,17 @@ nav a {
       -webkit-column-count: 1 !important;
       -moz-column-count: 1;
       column-count: 1; } }
+.section-title h3 {
+  margin-bottom: 0; }
+.section-title h2 {
+  position: absolute;
+  top: -50px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: -1; }
+.section-title p {
+  font-size: 16px;
+  margin: 0; }
 
 /*# sourceMappingURL=custom.css.map */
