--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1039,13 +1039,169 @@ nav {
   }
 }
 
+.testimonial-carousel {
+  .owl-dots {
+    display: none;
+  }
+
+  .text-paper {
+    p {
+      margin-bottom: 0;
+
+      &:first-child {
+        color: black;
+        font-weight: bold;
+        font-size: 16px;
+        margin-bottom: 10px;
+      }
+
+      &:nth-child(2) {
+        font-size: 15px;
+      }
+
+      &.actor {
+        margin-top: 20px;
+        font-size: 15px;
+        color: black;
+        font-weight: bold;
+
+        span {
+          font-weight: normal;
+          color: #7d7a7a;
+        }
+      }
+    }
+  }
+
+  .owl-nav {
+    width: 7%;
+    position: absolute;
+    right: 40%;
+    bottom: 40px;
+
+    &:before {
+      position: absolute;
+      content: "|";
+      left: 0;
+      right: 0;
+      top: 10px;
+      font-size: 20px;
+    }
+
+    [class*=owl-] {
+      position: absolute;
+      height: 30px;
+      width: 30px;
+      background: none;
+      color: black;
+      font-size: 25px;
+
+      &:hover {
+        background: none;
+        color: black;
+      }
+    }
+
+    &:hover {
+      background: unset;
+    }
+
+    .owl-prev {
+      left: 0;
+    }
+
+    .owl-next {
+      right: 0;
+    }
+  }
+}
+
+.wrap-paper {
+  padding: 20px;
+  border-radius: 15px;
+  border: 1px $pink solid;
+
+  .owl-dots {
+    width: 30%;
+    right: 10%;
+    left: unset;
+    bottom: 0px;
+
+    .owl-dot {
+      &:hover, &.active {
+        span {
+          background: #CCC;
+        }
+      }
+
+      span {
+        border: 2px solid #CCC;
+      }
+    }
+  }
+
+  .owl-nav {
+    width: 30%;
+    position: absolute;
+    right: 10%;
+    bottom: 30px;
+
+    div[class^="owl"] {
+      position: absolute;
+      height: 30px;
+      width: 30px;
+      background: none;
+
+      &:hover {
+        background: unset;
+      }
+
+      i {
+        font-size: 30px;
+        color: black;
+      }
+    }
+
+    .owl-prev {
+      left: -20px;
+    }
+
+    .owl-next {
+      right: -20px;
+    }
+  }
+
+  .text-paper {
+    p {
+      margin-bottom: 0;
+
+      &:first-child {
+        color: #a5a3a3;
+        margin-bottom: 10px;
+      }
+
+      &:nth-child(2) {
+        color: black;
+        font-weight: bold;
+        font-size: 16px;
+        margin-bottom: 10px;
+      }
+
+      &:last-child {
+        font-size: 15px;
+      }
+    }
+  }
+}
+
 .gtcl {
   background-color: $bg-lam2;
 
   .content {
     padding: 20px;
     min-height: 352px;
-    height:100%;
+    height: 100%;
+
     &.bg-1 {
       background-color: #f1f8e0;
     }
@@ -1072,6 +1228,7 @@ nav {
   h4 {
     text-transform: uppercase;
     font-size: 20px;
+    text-align: center;
 
     &.do {
       color: $color-red;
@@ -1086,18 +1243,57 @@ nav {
     }
   }
 
-  ul {
-    li {
-      display: flex;
-      align-items: flex-start;
-      font-size: 16px;
+  p {
+    text-align: center;
+  }
 
-      img {
-        margin-right: 10px;
-        width: 16px;
+  &.invent {
+    background-image: url("../img/invent/pnk.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: color;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding-top: 50px;
+
+    .owl-nav {
+      div[class^="owl"] {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        height: 30px;
+        width: 30px;
+        border-radius: 100%;
+        background: none;
+        border: 1px solid $pink;
+
+        i {
+          color: $pink;
+        }
+      }
+
+      .owl-prev {
+        left: -20px;
+      }
+
+      .owl-next {
+        right: -20px;
       }
     }
+
+    .content {
+      background: none;
+
+      p {
+        font-size: 14px;
+      }
+    }
+
+    .icon-top {
+      padding: 0 40px;
+    }
   }
+
 }
 
 @media (max-width: 467px) {
@@ -1124,7 +1320,8 @@ nav {
         margin-left: 0 !important;
         margin-right: 0 !important;
       }
-      a{
+
+      a {
         margin-top: 10px;
       }
     }
@@ -1151,29 +1348,50 @@ nav {
       left: 0 !important;
     }
   }
-  .gtcl{
+  .gtcl {
     padding-top: 30px;
-    .content{
+
+    .content {
       margin-bottom: 20px;
     }
   }
   .row-bg {
-    padding: 20px 0!important;
+    padding: 20px 0 !important;
 
     &:before {
       width: 100% !important;
-      left: 0!important;
+      left: 0 !important;
     }
   }
   .list-item {
-    -webkit-column-count: 1!important;
+    -webkit-column-count: 1 !important;
     -moz-column-count: 1;
     column-count: 1;
 
     &.column-2 {
-      -webkit-column-count: 1!important;
+      -webkit-column-count: 1 !important;
       -moz-column-count: 1;
       column-count: 1;
     }
+  }
+}
+
+.section-title {
+  h3 {
+    margin-bottom: 0;
+  }
+
+  h2 {
+    position: absolute;
+    top: -50px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: -1;
+  }
+
+  p {
+    font-size: 16px;
+    margin: 0;
   }
 }
