--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1395,3 +1395,31 @@ nav {
     margin: 0;
   }
 }
+
+.about-janami {
+  strong {
+    font-weight: bold;
+  }
+
+  .content {
+    p {
+      font-size: 14px;
+    }
+  }
+}
+
+.list-logo {
+  .img {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    margin-bottom: 10px;
+    img {
+      display: flex;
+      object-position: center;
+      object-fit: cover;
+    }
+  }
+}
