--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -891,4 +891,7 @@ nav a {
     object-position: center;
     object-fit: cover; }
 
+.owl-carousel.hide-navigation .owl-nav {
+  display: none; }
+
 /*# sourceMappingURL=custom.css.map */
