--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -902,4 +902,36 @@ nav a {
 .owl-carousel.hide-navigation .owl-nav {
   display: none; }
 
+.pdf-viewer {
+  position: relative;
+  border-radius: 30px;
+  overflow: hidden; }
+  .pdf-viewer .pdf-action {
+    width: 100%; }
+    .pdf-viewer .pdf-action .page {
+      position: absolute;
+      right: 20px;
+      bottom: 20px;
+      z-index: 1;
+      color: white;
+      padding: 10px;
+      background-color: rgba(0, 0, 0, 0.6); }
+    .pdf-viewer .pdf-action button {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      width: 40px;
+      height: 40px;
+      background: none;
+      border-radius: 100%;
+      border: 1px solid #FFF;
+      color: white;
+      font-size: 20px;
+      background: rgba(0, 0, 0, 0.6); }
+      .pdf-viewer .pdf-action button#prev {
+        left: 5px; }
+      .pdf-viewer .pdf-action button#next {
+        right: 5px; }
+
 /*# sourceMappingURL=custom.css.map */
