--- a/frontend/janami/web/css/pink-theme.css
+++ b/frontend/janami/web/css/pink-theme.css
@@ -1381,7 +1381,7 @@ ol.digit-list p {
 }
 
 .white-menu .wsmainfull {
-  background-color: #fff!important;
+  background-color: transparent!important;
   padding: 6px 0;
   -webkit-box-shadow: 0 2px 3px rgba(96, 96, 96, .085);
   -moz-box-shadow: 0 2px 3px rgba(96, 96, 96, .085);
