--- a/frontend/janami/web/css/hover.css
+++ b/frontend/janami/web/css/hover.css
@@ -2006,7 +2006,7 @@
 .hvr-ripple-out:before {
   content: '';
   position: absolute;
-  border: #e1e1e1 solid 6px;
+  border: #E44126 solid 6px;
   top: 0;
   right: 0;
   bottom: 0;
